--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 matplotlib==3.7.2
-neurite==0.2
+neurite @ git+https://github.com/mr-field/neurite@dev
 numpy==1.24.3
 pandas==2.0.3
 scipy==1.12.0
 SimpleITK==2.3.1
-tensorflow[and-cuda]==2.15.1
-voxelmorph==0.2
+tf-keras==2.17.0
+tensorflow[and-cuda]==2.17.0
+voxelmorph @ git+https://github.com/mr-field/voxelmorph@dev
 nibabel==5.2.0
 pydot==2.0.0
